Use 0xFE opacity for sheld in maximized state.

This is a workaround. Using fully opaque color somehow
causes the content clipping on the arc content window.
It'll be investigated separately.

Bug: 901538
Test: manual.
Change-Id: Ifee1ccdeb3e877008f33ef62ba1dd5024bb4b196
Reviewed-on: https://chromium-review.googlesource.com/c/1324393
Reviewed-by: Alex Newcomer <newcomer@chromium.org>
Commit-Queue: Mitsuru Oshima <oshima@chromium.org>
Cr-Commit-Position: refs/heads/master@{#606185}
Former-commit-id: bc8967075ab8cf77627863845dc4a3af22b47f88