ash/shelf/shelf_constants.h
@@ -69,7 +69,10 @@ ASH_EXPORT constexpr SkColor kShelfIconColor = SK_ColorWHITE;
 // The alpha value for the shelf background.
 ASH_EXPORT constexpr int kShelfTranslucentOverAppList = 51;            // 20%
 ASH_EXPORT constexpr int kShelfTranslucentAlpha = 153;                 // 60%
-ASH_EXPORT constexpr int kShelfTranslucentMaximizedWindow = 255;       // 100%
+// Using 0xFF causes clipping on the overlay candidate content, which prevent
+// HW overlay, probably due to a bug in compositor. Fix it and use 0xFF.
+// crbug.com/901538
+ASH_EXPORT constexpr int kShelfTranslucentMaximizedWindow = 254;       // ~100%
 
 // The alpha value used to darken a colorized shelf when the shelf is
 // translucent.
